edit row to display flex

--- a/singleNews.html
+++ b/singleNews.html
@@ -247,207 +247,179 @@
                 <h1 class="titleCardD">
                   <a href=""> گرنگترین هەواڵ </a>
                 </h1>
-                <div class="row">
-                  <div class="col-lg-4 col-md-4 col-12 sameColor">
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/important.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
-                    </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/1918122023_MHAMAD SUDANY1.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
-                    </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/warpepole.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
-                    </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/warpepole.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-12 health">
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/cake.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
-                    </div>
 
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/cake.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                <div class="d-flex flex-wrap gap-1">
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/cake.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/cake.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-12 Sport">
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/sport.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/sport.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/sport.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                    <div class="col-12">
-                      <a href="/" class="linkCard">
-                        <img
-                          src="./assets/img/image/sport.jpg"
-                          class="img-fluid"
-                          alt=""
-                        />
-                        <div class="textCardM">
-                          <span class="catmer">4 کاتژمێر پێش ئێستا</span>
-                          <h5>
-                            لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە
-                            دوو بژاردە ئاشکرا دەکات
-                          </h5>
-                        </div>
-                      </a>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
                     </div>
-                  </div>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
+                    </div>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
+                    </div>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
+                    </div>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
+                    </div>
+                  </a>
+                  <a href="/" class="linkCard">
+                    <img
+                      src="./assets/img/image/important.jpg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <div class="textCardM">
+                      <span class="catmer">4 کاتژمێر پێش ئێستا</span>
+                      <h5>
+                        لەبارەى چارەنوسی پرۆسەى خوێندنەوە وەزیرى پەروەردە دوو
+                        بژاردە ئاشکرا دەکات
+                      </h5>
+                    </div>
+                  </a>
                 </div>
+
+                
               </div>
             </div>
             <!-- end main Section column right -->
