--- a/index.html
+++ b/index.html
@@ -117,90 +117,121 @@
     <!-- ======= End Header ======= -->
 
     <main class="main_section">
-      <div class="container">
-        <div class="row row_card">
-          <div class="col-lg-6 col-md-6 col-12">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="./assets/img/image/16831929680518870.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
-                </h5>
-                <p class="card-text">
-                  <a href="">
-                    اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
-                    متقلب
-                  </a>
-                </p>
-                <a href="" class="btn-Con">ادامه</a>
+      <div class="topSection">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h6>
+                <a href="">فروش بلیت الکترونیکی فوتبال</a>
+              </h6>
+              <p>
+                این سامانه به منظور فروش بلیت الکترونیکی مسابقات فوتبال طراحی
+                شده است. از طریق این سامانه، کلیه هواداران می توانند پس از
+                ثبت‌نام و ورود به سامانه، بلیت مسابقات مورد نظر خود را تهیه
+                کنند.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section_main">
+        <div class="container">
+          <div class="row row_card pb-4">
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="card">
+                <img
+                  class="card-img-top"
+                  src="./assets/img/image/16831929680518870.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
+                  </h5>
+                  <p class="card-text">
+                    <a href="">
+                      اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
+                      متقلب
+                    </a>
+                  </p>
+                  <a href="" class="btn-Con">ادامه</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="card">
+                <img
+                  class="card-img-top"
+                  src="./assets/img/image/16831929680518870.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
+                  </h5>
+                  <p class="card-text">
+                    <a href="">
+                      اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
+                      متقلب
+                    </a>
+                  </p>
+                  <a href="" class="btn-Con">ادامه</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="card">
+                <img
+                  class="card-img-top"
+                  src="./assets/img/image/16831929680518870.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
+                  </h5>
+                  <p class="card-text">
+                    <a href="">
+                      اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
+                      متقلب
+                    </a>
+                  </p>
+                  <a href="" class="btn-Con">ادامه</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="card">
+                <img
+                  class="card-img-top"
+                  src="./assets/img/image/16831929680518870.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
+                  </h5>
+                  <p class="card-text">
+                    <a href="">
+                      اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
+                      متقلب
+                    </a>
+                  </p>
+                  <a href="" class="btn-Con">ادامه</a>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-12">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="./assets/img/image/16831929680518870.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
-                </h5>
-                <p class="card-text">
-                  <a href="">
-                    اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
-                    متقلب
-                  </a>
-                </p>
-                <a href="" class="btn-Con">ادامه</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-12">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="./assets/img/image/16831929680518870.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
-                </h5>
-                <p class="card-text">
-                  <a href="">
-                    اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
-                    متقلب
-                  </a>
-                </p>
-                <a href="" class="btn-Con">ادامه</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-12">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="./assets/img/image/16831929680518870.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  <a href=""> خرید بلیت حضوری در ورزشگاه از افراد متقلب </a>
-                </h5>
-                <p class="card-text">
-                  <a href="">
-                    اطلاعیه مهم در خصوص خرید بلیت حضوری در ورزشگاه از افراد
-                    متقلب
-                  </a>
-                </p>
-                <a href="" class="btn-Con">ادامه</a>
-              </div>
+        </div>
+      </div>
+      <div class="section_bottom">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+            >
+              <h6>برای خرید بیلت مسابقات فوتبال کلیک کنید!</h6>
+              <a href="">خرید بلیت</a>
             </div>
           </div>
         </div>
@@ -209,7 +240,7 @@
 
     <footer class="footer">
       <div class="section_top">
-        <ul class="list-unstyled d-flex">
+        <ul class="list-unstyled d-flex mb-0">
           <li>
             <a href="">راهنمای سامانه</a>
           </li>
@@ -244,7 +275,9 @@
                 برهان مبین است.
               </p>
             </div>
-            <div class="col-lg-6 d-flex justify-content-between">
+            <div
+              class="col-lg-6 d-flex justify-content-between align-items-center"
+            >
               <img src="./assets/img/logo/ffiri.png" class="img-fluid" alt="" />
               <img
                 src="./assets/img/image/enamad.png"
