--- a/buyticket.html
+++ b/buyticket.html
@@ -89,7 +89,7 @@
 
     <main class="buy_ticketPage">
       <div class="container">
-        <div class="row">
+        <div class="row mt-3">
           <div class="col-lg-12 d-flex justify-content-between profiles">
             <h6>سامانه فروش بلیت الکترونیکی مسابقات فوتبال</h6>
             <div class="profile">
@@ -106,6 +106,77 @@
                   <a href=""> خروج </a>
                 </span>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-lg-2">
+            <ul class="list-unstyled steps_list">
+              <li>
+                <a href=""> انتخاب تیم و بازی </a>
+              </li>
+              <li>
+                <a href=""> ورود اطلاعات </a>
+              </li>
+              <li>
+                <a href=""> تایید صورتحساب </a>
+              </li>
+              <li>
+                <a href=""> اتصال به بانک </a>
+              </li>
+              <li>
+                <a href=""> پایان خرید </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-10">
+            <div
+              class="games d-flex justify-content-between align-items-center"
+            >
+              <img
+                src="./assets/img/image/15003697631825607.png"
+                class="img-fluid"
+                alt=""
+              />
+              <h6>پرسپولیس تهران</h6>
+              <p>
+                یک‌شنبه ٢٧ اسفند ١٤٠٢ ساعت ١٨:٤٥ ورزشگاه آزادی تهران، استادیوم
+                فوتبال لیگ برتر 1402-1403
+              </p>
+              <h6>پیکان تهران</h6>
+              <img src="./assets/img/image/14894842900919743.png" alt="" />
+            </div>
+            <div
+              class="games d-flex justify-content-between align-items-center"
+            >
+              <img
+                src="./assets/img/image/15003697631825607.png"
+                class="img-fluid"
+                alt=""
+              />
+              <h6>پرسپولیس تهران</h6>
+              <p>
+                یک‌شنبه ٢٧ اسفند ١٤٠٢ ساعت ١٨:٤٥ ورزشگاه آزادی تهران، استادیوم
+                فوتبال لیگ برتر 1402-1403
+              </p>
+              <h6>پیکان تهران</h6>
+              <img src="./assets/img/image/14894842900919743.png" alt="" />
+            </div>
+            <div
+              class="games d-flex justify-content-between align-items-center"
+            >
+              <img
+                src="./assets/img/image/15003697631825607.png"
+                class="img-fluid"
+                alt=""
+              />
+              <h6>پرسپولیس تهران</h6>
+              <p>
+                یک‌شنبه ٢٧ اسفند ١٤٠٢ ساعت ١٨:٤٥ ورزشگاه آزادی تهران، استادیوم
+                فوتبال لیگ برتر 1402-1403
+              </p>
+              <h6>پیکان تهران</h6>
+              <img src="./assets/img/image/14894842900919743.png" alt="" />
             </div>
           </div>
         </div>
